--- a/Raven.MQ.Tests/Raven.MQ.Tests.csproj
+++ b/Raven.MQ.Tests/Raven.MQ.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{55CB8E06-0A0D-4CD9-A0F9-B7BC4C890D13}</ProjectGuid>
+    <ProjectGuid>{BB051898-C25C-4A0E-8259-51B8DED3D3E8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RavenMQ</RootNamespace>
-    <AssemblyName>RavenMQ</AssemblyName>
+    <RootNamespace>Raven.MQ.Tests</RootNamespace>
+    <AssemblyName>Raven.MQ.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,65 +30,32 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>..\RavenMQ.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net">
-      <HintPath>..\Raven.Http\bin\Debug\log4net.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\Modules\Munin\SharedLibs\Newtonsoft.Json.dll</HintPath>
-    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b9a188c8922137c6, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="xunit">
+      <HintPath>..\Modules\Munin\SharedLibs\xunit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config\InMemroyRavenConfiguration.cs" />
-    <Compile Include="Data\IncomingMessage.cs" />
-    <Compile Include="Extensions\IOExtensions.cs" />
-    <Compile Include="Extensions\JsonExtensions.cs" />
-    <Compile Include="Impl\Queues.cs" />
-    <Compile Include="IQueues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Impl\IUuidGenerator.cs" />
-    <Compile Include="Storage\GeneralStorageActions.cs" />
-    <Compile Include="Storage\IStorageActionsAccessor.cs" />
-    <Compile Include="Storage\ITransactionalStorage.cs" />
-    <Compile Include="Data\OutgoingMessage.cs" />
-    <Compile Include="Storage\MessagesActions.cs" />
-    <Compile Include="Storage\QueuesStorage.cs" />
-    <Compile Include="Storage\StorageActionsAccessor.cs" />
-    <Compile Include="Storage\TransactionalStorage.cs" />
-    <Compile Include="Storage\TransactionMode.cs" />
+    <Compile Include="SimpleMessages.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Modules\Munin\Raven.Munin\Raven.Munin.csproj">
-      <Project>{486537C2-EDF7-404F-9CFB-EEE25996DF5F}</Project>
-      <Name>Raven.Munin</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Raven.Abstractions\Raven.Abstractions.csproj">
-      <Project>{792DB9EB-4B5F-4AF4-BACC-FF842A8DB722}</Project>
-      <Name>Raven.Abstractions</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Raven.Http\Raven.Http.csproj">
       <Project>{508E5F54-A8F3-47F4-9297-CB96F91D4DF8}</Project>
       <Name>Raven.Http</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\RavenMQ.snk">
-      <Link>RavenMQ.snk</Link>
-    </None>
+    <ProjectReference Include="..\Raven.MQ\Raven.MQ.csproj">
+      <Project>{55CB8E06-0A0D-4CD9-A0F9-B7BC4C890D13}</Project>
+      <Name>Raven.MQ</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
