--- a/Raven.MQ.Tests/Raven.MQ.Tests.csproj
+++ b/Raven.MQ.Tests/Raven.MQ.Tests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueuesTest.cs" />
     <Compile Include="SimpleMessages.cs" />
+    <Compile Include="Streams.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Raven.Http\Raven.Http.csproj">
