--- a/Raven.MQ/Raven.MQ.csproj
+++ b/Raven.MQ/Raven.MQ.csproj
@@ -45,6 +45,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -54,14 +55,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\InMemroyRavenConfiguration.cs" />
+    <Compile Include="Config\RavenConfiguration.cs" />
     <Compile Include="Data\IncomingMessage.cs" />
     <Compile Include="Extensions\IOExtensions.cs" />
     <Compile Include="Extensions\JsonExtensions.cs" />
+    <Compile Include="Extensions\MetadataExtensions.cs" />
     <Compile Include="Impl\Queues.cs" />
     <Compile Include="IQueues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Impl\IUuidGenerator.cs" />
     <Compile Include="Data\QueueStatistics.cs" />
+    <Compile Include="Server\QueuesHttpServer.cs" />
+    <Compile Include="Server\Responders\Queue.cs" />
+    <Compile Include="Server\Responders\QueuesRoot.cs" />
+    <Compile Include="Server\Responders\QueuesResponder.cs" />
     <Compile Include="Storage\GeneralStorageActions.cs" />
     <Compile Include="Storage\IStorageActionsAccessor.cs" />
     <Compile Include="Storage\ITransactionalStorage.cs" />
