--- a/Raven.Abstractions/Raven.Abstractions.csproj
+++ b/Raven.Abstractions/Raven.Abstractions.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ConsumeCommand.cs" />
+    <Compile Include="Commands\EnqueueCommand.cs" />
+    <Compile Include="Commands\ReadCommand.cs" />
+    <Compile Include="Data\IncomingMessage.cs" />
+    <Compile Include="Data\OutgoingMessage.cs" />
+    <Compile Include="Data\QueueStatistics.cs" />
     <Compile Include="Data\TransactionInformation.cs" />
     <Compile Include="Exceptions\ConcurrencyException.cs" />
     <Compile Include="Extensions\StreamExtension.cs" />
