--- a/Raven.MQ.Tests/Raven.MQ.Tests.csproj
+++ b/Raven.MQ.Tests/Raven.MQ.Tests.csproj
@@ -51,6 +51,10 @@
     <Compile Include="Streams.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Raven.Abstractions\Raven.Abstractions.csproj">
+      <Project>{792DB9EB-4B5F-4AF4-BACC-FF842A8DB722}</Project>
+      <Name>Raven.Abstractions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Raven.Http\Raven.Http.csproj">
       <Project>{508E5F54-A8F3-47F4-9297-CB96F91D4DF8}</Project>
       <Name>Raven.Http</Name>
