--- a/Raven.MQ.Tests/Raven.MQ.Tests.csproj
+++ b/Raven.MQ.Tests/Raven.MQ.Tests.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractQueuesTest.cs" />
+    <Compile Include="BatchOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueuesTest.cs" />
     <Compile Include="SimpleMessages.cs" />
