--- a/Raven.MQ/Raven.MQ.csproj
+++ b/Raven.MQ/Raven.MQ.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Impl\IUuidGenerator.cs" />
     <Compile Include="Server\QueuesHttpServer.cs" />
+    <Compile Include="Server\Responders\Batch.cs" />
     <Compile Include="Server\Responders\Messages.cs" />
     <Compile Include="Server\Responders\Queue.cs" />
     <Compile Include="Server\Responders\QueuesRoot.cs" />
