--- a/Raven.MQ.Tests/Raven.MQ.Tests.csproj
+++ b/Raven.MQ.Tests/Raven.MQ.Tests.csproj
@@ -46,6 +46,8 @@
   <ItemGroup>
     <Compile Include="AbstractQueuesTest.cs" />
     <Compile Include="BatchOperations.cs" />
+    <Compile Include="Network\WebSocketConnectionTests.cs" />
+    <Compile Include="Network\WebSocketConnectionTestsForErrors.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueuesTest.cs" />
     <Compile Include="SimpleMessages.cs" />
