--- a/Raven.MQ.Tests/Raven.MQ.Tests.csproj
+++ b/Raven.MQ.Tests/Raven.MQ.Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="SimpleMessages.cs" />
     <Compile Include="Streams.cs" />
     <Compile Include="Subscriptions.cs" />
+    <Compile Include="Network\SubscriptionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Raven.Abstractions\Raven.Abstractions.csproj">
@@ -64,6 +65,10 @@
     <ProjectReference Include="..\Raven.Http\Raven.Http.csproj">
       <Project>{508E5F54-A8F3-47F4-9297-CB96F91D4DF8}</Project>
       <Name>Raven.Http</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Raven.MQ.Server\Raven.MQ.Server.csproj">
+      <Project>{BA7CFEAC-1768-4B29-83D6-11ABD01DE8FB}</Project>
+      <Name>Raven.MQ.Server</Name>
     </ProjectReference>
     <ProjectReference Include="..\Raven.MQ\Raven.MQ.csproj">
       <Project>{55CB8E06-0A0D-4CD9-A0F9-B7BC4C890D13}</Project>
