--- a/Raven.MQ.Client/Raven.MQ.Client.csproj
+++ b/Raven.MQ.Client/Raven.MQ.Client.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Network\ClientConnection.cs" />
     <Compile Include="Network\IClientIntegration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RavenMQConnection.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Raven.Abstractions\Raven.Abstractions.csproj">
