Better format for the detailed batch logs

--- a/Raven.MQ.Client/Raven.MQ.Client.csproj
+++ b/Raven.MQ.Client/Raven.MQ.Client.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IRavenMQConnection.cs" />
     <Compile Include="IRavenMQContext.cs" />
     <Compile Include="Network\ClientConnection.cs" />
     <Compile Include="Network\IClientIntegration.cs" />
