--- a/Raven.MQ.Client/Raven.MQ.Client.csproj
+++ b/Raven.MQ.Client/Raven.MQ.Client.csproj
@@ -47,13 +47,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Envelope.cs" />
     <Compile Include="IRavenMQConnection.cs" />
     <Compile Include="IRavenMQContext.cs" />
+    <Compile Include="IRavenMQPublisher.cs" />
     <Compile Include="Network\ClientConnection.cs" />
     <Compile Include="Network\IClientIntegration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RavenMQConnection.cs" />
     <Compile Include="Impl\RavenMQContext.cs" />
+    <Compile Include="RavenMQPublisher.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Raven.Abstractions\Raven.Abstractions.csproj">
